Fixes #494 version aligning.

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -1348,6 +1348,7 @@ table td {
 /* footer */
 footer hr {
   background: white;
+  clear: both;
 }
 footer ul li {
   line-height: 1.5;
@@ -1678,6 +1679,10 @@ footer ul li.follow-us {
 
   .site-titel a {
     padding-bottom: .25em;
+  }
+
+  footer .wrap .version {
+    float: right;
   }
 }
 
